# wasmio-workshop

./: .gitignore  README.md  kubernetes.sh
.devcontainer/: README.md  devcontainer.json
.devcontainer/apt-install/: README.md  devcontainer-feature.json  install.sh
.devcontainer/cosmo-install/: README.md  devcontainer-feature.json  install.sh
.devcontainer/wash-install/: README.md  devcontainer-feature.json  install.sh
.devcontainer/wasm-install/: README.md  devcontainer-feature.json  install.sh
.github/workflows/: todo_build.yml  todo_release.yml
provider/: Cargo.toml  Makefile  provider.mk
provider/src/: main.rs
todo/: Cargo.toml  README.md  build.rs  manifest.yaml  wasmcloud.toml
todo/src/: lib.rs  ui.rs
todo/ui/: .gitignore  README.md  package.json
todo/ui/public/: index.html
todo/ui/src/: App.js
todo/ui/src/components/: AddTask.js  DeleteTask.js  UpdateTask.js  tasks.js
