[package]
name = "mykeyvalue"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
wasmbus-rpc = { version = "0.11", features = ["otel"] }
wasmcloud-interface-keyvalue = "0.9"
tracing = { version = "0.1", features = ["log"] }

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.6.4"

[[bin]]
name = "mykeyvalue"
path = "src/main.rs"
