[package]
authors = ["Cosmonic Team"]
edition = "2021"
name = "todo"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.41"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
# wasmCloud SDKs
wasmbus-rpc = "0.11.2"
wasmcloud-interface-httpserver = "0.9.0"
wasmcloud-interface-keyvalue = "0.9.1"
wasmcloud-interface-logging = "0.8.1"
# Required for UI assets
rust-embed = "6.3.0"
mime_guess = "2"

[profile.release]
strip = true
lto = true
# Optimize for small code size
opt-level = "s"
